Bug 93452 - EventDispatcher::dispatchSimulatedClick should not reuse the same EventDispatcher instance.
Summary: EventDispatcher::dispatchSimulatedClick should not reuse the same EventDispat...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: UI Events (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Hayato Ito
URL:
Keywords:
Depends on:
Blocks: 91290
  Show dependency treegraph
 
Reported: 2012-08-08 01:47 PDT by Hayato Ito
Modified: 2012-08-08 18:11 PDT (History)
5 users (show)

See Also:


Attachments
fix simulatedClick (4.34 KB, patch)
2012-08-08 01:55 PDT, Hayato Ito
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Hayato Ito 2012-08-08 01:47:41 PDT
This is a follow up issue after https://bugs.webkit.org/show_bug.cgi?id=93322.

There is yet another place where the same EventDispatcher instance is reused across event dispatching.

In addition to that, in order to simulate a real click, we must use the different dispatchers because we must recalculate event ancestors each time.
Current implementation wrongly freezes event ancestors at the first event dispatch.
Comment 1 Hayato Ito 2012-08-08 01:55:03 PDT
Created attachment 157153 [details]
fix simulatedClick
Comment 2 WebKit Review Bot 2012-08-08 18:11:51 PDT
Comment on attachment 157153 [details]
fix simulatedClick

Clearing flags on attachment: 157153

Committed r125133: <http://trac.webkit.org/changeset/125133>
Comment 3 WebKit Review Bot 2012-08-08 18:11:54 PDT
All reviewed patches have been landed.  Closing bug.